# getting-started-with-analytics-engineering

./: .gitignore  .gitpod.yml  Makefile  README.md  docker-compose.yml  gitpod-command.sh  profiles.yml  profiles.yml.example  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
greenery/: profiles.yml
greenery/macros/: get_percentage.sql
greenery/models/: average_orders_per_hour.sql  exposures.yml  models.yml  number_of_users.sql  number_of_users_with_one_two_or_three_plus_purchases.sql  src.yml  stg_orders.sql  stg_users.sql
greenery/models/kbank/: count_users.sql
greenery/models/marts/: _models.yml  add_to_cart_rate.sql  conversion_rate_by_product.sql  marts.yml  model2.sql  number_of_users.sql  number_of_users_with_one_two_or_three_plus_purchases.sql  user_repeat_rate.sql
greenery/models/staging/: models.yml  src.yml  stg_addresses.sql  stg_events.sql  stg_order_items.sql  stg_orders.sql  stg_products.sql  stg_promos.sql  stg_users.sql
greenery/models/staging/base/: base.yml  base_users.sql
greenery/models/staging/greenery/: _models.yml  _src.yml  stg_greenery__addresses.sql  stg_greenery__events.sql  stg_greenery__orders.sql  stg_greenery__users.sql
setup/data/: superheroes.csv
setup/scripts/: init.sql
yaml_files/: _exposures.yml  _models.yml  profiles.yml
