[tool.poetry]
name = "getting-started-with-analytics-engineering"
version = "0.1.0"
description = ""
authors = ["zkan <zkan.cs@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
dbt-core = "^1.8.4"
dbt-postgres = "^1.8.2"
dbt-bigquery = "^1.8.2"
dbt-clickhouse = "^1.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
